istio-1.4.2/istio-apps/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    ver: v2
  name: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      ver: v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        ver: v2
    spec:
      containers:
      - image: nginxdemos/hello
        name: nginx1
        resources: {}
status: {}
