istio-1.4.2/istio-apps/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
   name: nginx-gateway
spec:
   selector:
      istio: ingressgateway
   servers:
   - port:
        number: 80
        name: http
        protocol: HTTP
     hosts:
     - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: nginx
        port:
          number: 80
      weight: 80
    - destination:
        host: nginx1
        port:
          number: 80
      weight: 20
